--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="30dp"
-            android:textOff="Professor"
+            android:textOff="@string/str_professor"
             android:textOn="@string/str_aluno" />
 
         <EditText
