--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorCinza">#808080</color>
+    <color name="colorDarkBlue">#00008B</color>
+    <color name="colorSkyBlue">#00BFFF</color>
+    <color name="colorSlateGray">#708090</color>
+    <color name="colorVermelho">#FF0000</color>
+
 </resources>
