--- a/app/src/main/res/layout/activity_adm.xml
+++ b/app/src/main/res/layout/activity_adm.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorSkyBlue"
     tools:context="br.com.nrbsistemas.uniderpapp.view.AdmActivity">
 
     <TextView
@@ -16,6 +17,9 @@
         android:textSize="20dp"
         android:textStyle="bold"/>
     <ListView
+        android:layout_margin="20dp"
+        android:layout_gravity="center"
+        android:background="@color/colorSlateGray"
         android:layout_marginTop="50dp"
         android:id="@+id/lista"
         android:layout_width="match_parent"
