--- a/app/src/main/res/layout/activity_alunos.xml
+++ b/app/src/main/res/layout/activity_alunos.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="br.com.nrbsistemas.uniderpapp.AlunosActivity">
-
-</android.support.constraint.ConstraintLayout>
+    tools:context="br.com.nrbsistemas.uniderpapp.view.AlunosActivity">
+    <ListView
+        android:id="@+id/list_lista_alunos"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></ListView>
+</LinearLayout>
