--- a/app/src/main/res/layout/opcaoes_adm.xml
+++ b/app/src/main/res/layout/opcaoes_adm.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
+    android:gravity="center"
     android:layout_height="?android:attr/listPreferredItemHeight">
     
     <ImageView
         android:id="@+id/img_opc_adm"
+        android:layout_margin="20dp"
         android:layout_weight="3"
         android:layout_width="0dp"
         android:layout_height="wrap_content" />
