--- a/app/src/main/res/menu/menu_cad.xml
+++ b/app/src/main/res/menu/menu_cad.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/menu_cad_logout"
+        android:title="Logof"/>
+    <item
+        android:id="@+id/menu_cad_sair"
+        android:title="Sair" />
 </menu>
