--- a/app/src/main/res/layout/activity_notas.xml
+++ b/app/src/main/res/layout/activity_notas.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="br.com.nrbsistemas.uniderpapp.NotasActivity">
+    tools:context="br.com.nrbsistemas.uniderpapp.view.NotasActivity">
 
 </android.support.constraint.ConstraintLayout>
