--- a/app/src/main/res/layout/activity_cad_pro.xml
+++ b/app/src/main/res/layout/activity_cad_pro.xml
@@ -4,7 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="br.com.nrbsistemas.uniderpapp.view.MainActivity">
+    tools:context="br.com.nrbsistemas.uniderpapp.CadProActivity">
+
+    <EditText
+        android:layout_marginLeft="80dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cadastrar Professores"
+        android:textColor="#000"
+        android:textSize="20dp"/>
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -20,10 +28,10 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <include layout="@layout/content_cad_pro" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/btn_flutuante"
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
