--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,10 +34,13 @@
         <EditText
             android:id="@+id/edt_login"
             android:gravity="center"
-            android:layout_width="150dp"
+            android:layout_width="200dp"
+            android:textColorHint="#fff"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="60dp"
+            android:layout_marginLeft="30dp"
             android:layout_marginTop="30dp"
+            android:textColor="#fff"
+            android:hint="Selecione seu prefil"
             android:inputType="text"
             android:maxLines="1" />
     </LinearLayout>
@@ -49,19 +52,25 @@
         android:orientation="horizontal">
 
         <TextView
+            android:textColor="#fff"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="50dp"
+            android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Senha:" />
 
         <EditText
             android:id="@+id/edt_senha"
-            android:layout_width="150dp"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="95dp"
+            android:layout_marginLeft="60dp"
             android:hint="Senha"
+            android:gravity="center"
+            android:textColorHint="#fff"
             android:inputType="text"
-            android:maxLines="1"/>
+            android:maxLines="1"
+            android:textColor="#fff"
+            />
     </LinearLayout>
 
     <Button
