--- a/app/src/main/res/layout/activity_cad_pro.xml
+++ b/app/src/main/res/layout/activity_cad_pro.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="br.com.nrbsistemas.uniderpapp.CadProActivity">
+    tools:context="br.com.nrbsistemas.uniderpapp.view.CadProActivity">
 
     <EditText
         android:layout_marginLeft="80dp"
