--- a/app/src/main/res/layout/content_cad_pro.xml
+++ b/app/src/main/res/layout/content_cad_pro.xml
@@ -8,7 +8,7 @@
     android:background="@color/colorAzulClarinho"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="br.com.nrbsistemas.uniderpapp.CadProActivity"
+    tools:context="br.com.nrbsistemas.uniderpapp.view.CadProActivity"
     tools:showIn="@layout/activity_cad_pro">
 
     <TextView
